Solitaire interface and stuff
I'll probably change the input to take all at once, rather than allowing
a step-by-step move that makes for a lot of additional logic and
complexity.

Made changes and additions to Questionnaire. I'll probably revert some
of them, especially since I don't think I'll be using them now.